2003-08-06  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/Makefile.am: added libassetml
	* configure.in: removed gnome_compile_warnings / added libassetml
	* gcompris.spec.in: added libassetml
	* src/Makefile.am:added libassetml
	* src/gcompris/Makefile.am:
	* src/gcompris/gameutil.c: (gcompris_load_pixmap_asset),
	(gcompris_load_pixmap): initial support for libassetml
	* src/gcompris/gcompris.c: (setup_window): added gtk_window_fullscreen call to 
	  support full compliant standard window manager (like xfce)
	* src/gcompris/soundutil.c: (scheduler_bgnd): fixed end loop in case there was no 
	  .ogg to play
	* src/libassetml/assetml.c: Created 
	* src/libassetml/test/Makefile.am: Created
	* src/libassetml/tools/Makefile.am: Created
	* src/libassetml/tools/assetml-query.c: Created

2003-07-21  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/Makefile.am:
	* src/boards/Makefile.am:
	* src/boards/fifteen.c:  created the fifteen board based on the libgnomecanvas demo
	* boards/images/fifteen_frame.png: created the fifteen board
	* src/gcompris/about.c: (gcompris_about_start),
	(gcompris_about_stop): fixed a bug where 'esc' key was not closing the dialog
	* src/gcompris/bar.c: (gcompris_bar_start),
	(gcompris_bar_set_level): fixed a bug where 'esc' key was not closing the dialog
	* src/gcompris/config.c: (gcompris_config_start),
	(gcompris_config_stop): fixed a bug where 'esc' key was not closing the dialog
	* src/gcompris/gameutil.c: (gcompris_item_event_focus): fixed bug where the icon was becomming darker and darker
	* src/gcompris/gcompris.c: (board_widget_key_press_callback):  fixed a bug where 'esc' key was not closing the dialog
	* src/gcompris/help.c: (gcompris_help_start), (gcompris_help_stop): fixed a bug where 'esc' key was not closing the dialog

2003-07-15  Bruno coudoin  <bruno.coudoin@free.fr>

	* configure.in : changed to release 3.2
	* boards/geography/board3_0.xml.in: Fixed dual sound declaration. This level was broken.
