@@ -27,6 +27,8 @@ XIPH_PATH_OGG
 XIPH_PATH_AO
 XIPH_PATH_VORBIS
 
+AC_HEADER_DIRENT
+
 AC_PROG_CC
 AM_PROG_CC_STDC
 AC_HEADER_STDC
