@@ -1,1 +1,2 @@
 src/gcompris/gcompris-edit.glade
+src/libassetml/tools/assetml-query.c
